--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,58 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$jobs-app-primary: mat.define-palette(mat.$orange-palette, 400);
+$jobs-app-primary-dark: mat.define-palette(mat.$blue-palette, 600);
+$jobs-app-text: mat.define-palette(mat.$gray-palette, 900);
+$jobs-app-background: mat.define-palette(mat.$gray-palette, 50);
+$jobs-app-background-dark: mat.define-palette(mat.$blue-palette, 100);
+
+
+// The warn palette is optional (defaults to red).
+$jobs-app-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$jobs-app-light-theme: mat.define-light-theme((
+  color: (
+    primary: $jobs-app-primary,
+    accent: $jobs-app-background,
+    text: $jobs-app-text,
+    warn: $jobs-app-warn,
+  )
+));
+
+$jobs-app-dark-theme: mat.define-dark-theme((
+  color: (
+    primary: $jobs-app-primary-dark,
+    accent: $jobs-app-background-dark,
+    text: $jobs-app-text,
+    warn: $jobs-app-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($jobs-app-light-theme);
+
+.dark-theme {
+  @include mat.all-component-colors($jobs-app-dark-theme);
+}
+
 /* You can add global styles to this file, and also import other style files */
+
+$background-color: mat.get-color-from-palette($jobs-app-background);
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #e8ddce;}
