--- a/src/app/components/question/question.component.html
+++ b/src/app/components/question/question.component.html
@@ -1,1 +1,5 @@
-<p class="roboto-slab-title-text">{{question}}</p>
+<div class="image-question">
+  <p class="roboto-slab-title-text">{{question}}</p>
+  <img src="../../assets/{{img_path}}">
+</div>
+
