--- a/src/app/components/questions/questions.component.scss
+++ b/src/app/components/questions/questions.component.scss
@@ -6,8 +6,8 @@
 }
 
 .card {
-  width: 50%;
-  height: 65%;
+  width: 70%;
+  height: 85%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -33,25 +33,24 @@
   justify-content: center;
 }
 
-.small-text-decor{
-  color: white;
-  text-align: center;
-  background-color:rgba(0, 0, 0, 0.5);
-  border-radius:  0 0 10px 10px;
-  padding: 0 2rem 0 2rem;
+
+.button-right {
+  height: 20%;
+  margin: 1rem;
+  width: 4rem;
 }
 
-
-.button-margin {
-  margin: 2rem;
-  display: flex;
-  justify-content: flex-end;
-
+.button-back {
+  height: 20%;
+  margin: 1rem;
+  width: 4rem;
 }
+
 
 .button-decor {
   font-weight: 700 !important;
   border-radius: 2rem !important;
+  width: 4rem;
 }
 
 .bar {
@@ -78,7 +77,9 @@
 }
 
 .top {
+  margin-top: 0.5rem;
   width: 100%;
+  height: 20%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -87,34 +88,32 @@
 .content {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 80%;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.question-content {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  height: 100%;
-}
 
 .response {
   display: flex;
   width: 100%;
-  justify-content: space-around;
-  //justify-content: center;
-  margin: 2rem;
+  justify-content: space-between;
 }
+
 
 .button-response {
   margin: 2rem;
-  width: 12rem;
-  height: 6rem;
+  width: 7rem;
+  height: 2.5rem;
   font-weight: 700 !important;
-  font-size: 2rem;
+  font-size: 1.5rem;
   transition: all 0.5s ease;
+}
+
+.yes-no {
+  display: flex;
+  justify-content: space-between;
+  width: 60%;
 }
 
 .glow {
@@ -124,3 +123,5 @@
 .fade-out {
   opacity: 0.5;
 }
+
+
