Add support for inference machine

--- a/src/app/components/result-card/result-card.component.html
+++ b/src/app/components/result-card/result-card.component.html
@@ -5,7 +5,7 @@
     <mat-card-title class="roboto-slab-title-text">
       Congratulation! The ideal job for you is: {{job_result.job}}!
     </mat-card-title>
-    <img class="image" src="../../../assets/{{job_result.job_image}}">
+    <img class="image" src="../../../assets/{{job_result.img}}">
 
     <div class="button-margin">
       <button (click)="onRestart()" class="button-decor" mat-raised-button color="primary">RESTART</button>
