--- a/src/app/components/questions/questions.component.html
+++ b/src/app/components/questions/questions.component.html
@@ -9,7 +9,7 @@
 
     <div class="content">
 
-      <app-question
+      <app-question class="app-question"
         [img_path]="questions[current_question].img"
         [question]="questions[current_question].question">
       </app-question>
