--- a/src/app/components/questions/questions.component.html
+++ b/src/app/components/questions/questions.component.html
@@ -1,16 +1,16 @@
 <div class="container">
-  <mat-card class="card">
+  <mat-card *ngIf="questions.length > 0" class="card">
     <div class="top">
       <p>Part {{questions[current_question].part}} - Question {{current_question + 1}} of {{number_of_questions}}</p>
       <div class="progress-bar">
-        <div class="progress-bar-fill" [ngStyle]="{'width.%': (current_question + 1)/ number_of_questions * 100}"></div>
+        <div class="progress-bar-fill" [ngStyle]="{'width.%': (current_question + 1) / number_of_questions * 100}"></div>
       </div>
     </div>
 
     <div class="content">
 
-      <app-question
-        [img_path]="questions[current_question].img_name"
+      <app-question class="app-question"
+        [img_path]="questions[current_question].img"
         [question]="questions[current_question].question">
       </app-question>
 
